WPLUG-117 upload image icon is now a bit more visible. Fixed some labels, and added translation possibilities to ui labels

--- a/plugins/se.infomaker.ximteaser2/scss/index.scss
+++ b/plugins/se.infomaker.ximteaser2/scss/index.scss
@@ -18,9 +18,10 @@
 
     .upload-button {
         cursor: pointer;
-        font-size: 1rem;
+        font-size: 1.1rem;
         .fa {
-            color: #565656
+            color: #565656;
+            opacity: 1;
         }
     }
 
